--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#">Help</a>
                     </li>
                     <li class="nav-item me-3">
-                        <a class="nav-link" href="#">Commands</a>
+                        <a class="nav-link" th:href="@{/commands}">Commands</a>
                     </li>
                     <li class="nav-item me-3">
                         <a class="nav-link contact-link" href="#">Contact</a>
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-item" th:if="${isAuthenticated}">
-                        <a class="nav-link" href="#">Manage Modules</a>
+                        <a class="nav-link" th:href="@{/servers}">Servers</a>
                     </li>
 
                     <li class="nav-item" th:unless="${isAuthenticated}">
